kubernetes/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    app.kubernetes.io/name: M-treat-project
    app.kubernetes.io/part-of: m-treat-platform
spec:
  ingressClassName: nginx
  rules:
    # Notice: No "host:" key is defined here.
    # This allows you to reach it via "localhost" OR via the Minikube IP directly!
    - http:
        paths:
          # Rule 1: Specific path for the Backend API
          - path: /api
            pathType: Prefix
            backend:
              service:
                # Matches the name generated by Kustomize (backend-service + dev- prefix)
                name: dev-backend-service
                port:
                  number: 8000

          # Rule 2: Root catch-all for the Frontend UI
          - path: /
            pathType: Prefix
            backend:
              service:
                # Matches dev-frontend-service
                name: dev-frontend-service
                port:
                  number: 80
